--- a/templates/core/stage.html
+++ b/templates/core/stage.html
@@ -36,7 +36,7 @@
 
     <h4 class="my-3">Pin: <span class="badge rounded-pill bg-success">{{ album_pin }}</span></h4>
 
-    <h4>Share URL of album: <a id="albumShareURL" href="/album/{{ album_ref_id }}">/album/{{ album_ref_id }}</a><button data-bs-toggle="tooltip" title="Copy to clipboard" class="btn ms-3" onclick="copyToClipboard()"><i class="fa-regular fa-copy"></i></button><button data-bs-toggle="tooltip" title="Share on Whatsapp" class="btn ms-1" onclick="shareOnWA()"><i class="fa-brands fa-whatsapp"></i></button></h4>
+    <h4>Share URL of album: <a id="albumShareURL" href="/album/{{ album_ref_id }}">vental.pythonanywhere.com/album/{{ album_ref_id }}</a><button data-bs-toggle="tooltip" title="Copy to clipboard" class="btn ms-3" onclick="copyToClipboard()"><i class="fa-regular fa-copy"></i></button><button data-bs-toggle="tooltip" title="Share on Whatsapp" class="btn ms-1" onclick="shareOnWA()"><i class="fa-brands fa-whatsapp"></i></button></h4>
     
 
     <button class="btn btn-danger mt-5" onclick="deleteAlbum()"><i class="fa-solid fa-trash px-2"></i>Delete Album</button>
@@ -128,7 +128,7 @@
     function shareOnWA() {
       var albumURL = document.getElementById("albumShareURL").href;
       var albumName = document.getElementById("albumNameHidden").innerText;
-      var text = "Hey, check out this album: " + albumName + " on VentAl.\n\n"+ albumURL + "\n\n The album is password protected. You can access it by entering the pin: {{ album_pin }}";
+      var text = "Hey, check out this album: " + albumName + " on VentAl.\n\n "+ albumURL + "\n\n The album is password protected. You can access it by entering the pin: {{ album_pin }}";
       var waURL = "https://wa.me/?text=" + text;
       window.open(waURL, "_blank");
     }
