--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -21,6 +21,142 @@
             </div>
         </div>
     </section>
+    <section class="py-4 py-xl-5 bg-dark">
+        <h1 class="text-center text-light display-4 mb-5">8 Steps to make Awesome memories</h1>
+        <div class="container text-center">
+            <div class="row justify-content-around align-items-center mt-4">
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 1: </strong>Login to ventAl</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Flogin.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>Creating an account is simple.</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 2: </strong>Create Album</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Fdashboard.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>View previous Albums or create a new one.</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 3: </strong>Upload your Photos</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Fupload.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>Click the button and upload multiple images at once!</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 4: </strong>Change the Album Cover</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Fcover.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>Your Album Cover is what others see first. Make sure to upload a great one 🔥</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 5: </strong>Set the Album Name</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2FalbumMetadata.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>A short and sweet name 💖. Save it and your Album is ready! Share the link shown and the PIN with your attendees.</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 6: </strong>Viewers unlock it 🔐</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Funlock.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>Your Album is <b>secured</b> with a PIN. Only people with whom you have shared the PIN can access the Album!</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 7: </strong>Bonus: Find My Images 🪞</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2FfindMyImagesBtn.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>While viewers like to see all the pics but they have a special longing for their own pics!</p>
+                    </div>
+                </div>
+
+                <div class="card px-0 mx-1 my-3 col-md-3 col-10">
+                    <div class="card-header">
+                        <h4 class=""><strong>Step 8: </strong>Say Cheeeese 😁</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2FfindMyImagesInterface.png?alt=media" class="card-img-top">
+                    </div>
+                    
+                    <div class="card-footer">
+                        <p>Take a selfie or upload one of your pic to let ventAl's AI find all your Photos in the Album</p>
+                    </div>
+                </div>
+
+            </div>
+            <a href="/dashboard" class="btn btn-lg btn-primary my-5">Get Started Now!</a>
+        </div>
+    </section>
+
+    <section class="py-4 py-xl-5">
+        <div class="container text-center">
+        <h1 class="mb-5">View a Sample Album</h1>
+            <div class="card">
+                <div class="card-header">
+                    <h4 class=""><strong>Sample Album: </strong>Celebrations</h4>
+                </div>
+                <div class="card-body">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/sample-cover-images%2Fcover-5.webp?alt=media" class="card-img-top">
+                </div>
+                <div class="card-footer">
+                    <a href="/album/7526" class="btn btn-primary">View Album</a>
+                    <p>The album PIN is <b>2916</b></p>
+                </div>
+            </div>
+            <a href="/dashboard" class="btn btn-lg btn-warning my-5">Create Your Album Now</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container text-center">
+            <p class="text-muted">Made with ❤️ by <a href="https://www.linkedin.com/in/gautam-mehta-codergtm/" target="_blank">Gautam Mehta</a></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
