--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--Favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Fapple-touch-icon.png?alt=media">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Ffavicon-32x32.png?alt=media">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Ffavicon-16x16.png?alt=media">
+    <link rel="manifest" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Fsite.webmanifest?alt=media">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
