--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>VentAl Event Albums</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Fapple-touch-icon.png?alt=media">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Ffavicon-32x32.png?alt=media">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Ffavicon-16x16.png?alt=media">
+    <link rel="manifest" href="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Fsite.webmanifest?alt=media">
 </head>
 
 <body>
@@ -14,8 +19,9 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="text-uppercase fw-bold mb-3">ventAl</h2>
-                        <p class="mb-4">Create and share your Event Albums</p><a href="/dashboard" class="btn btn-primary fs-5 me-2 py-2 px-4" type="button">Create</a>
+                        <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Fandroid-chrome-192x192.png?alt=media" alt="" style="height: 10vh;">
+                        <h2 class="display-1  fw-bold mb-3">ventAl</h2>
+                        <p class="mb-4">Create and share your Event Albums</p><a href="/dashboard" class="btn btn-primary fs-5 me-2 py-2 px-4" type="button"><i class="fa-solid fa-images pe-2"></i>Create</a>
                     </div>
                 </div>
             </div>
@@ -125,12 +131,12 @@
                     </div>
                     
                     <div class="card-footer">
-                        <p>Take a selfie or upload one of your pic to let ventAl's AI find all your Photos in the Album</p>
+                        <p>Take a selfie or upload one of your pic to let ventAl's AI find all your Photos in the Album. Magic ✨</p>
                     </div>
                 </div>
 
             </div>
-            <a href="/dashboard" class="btn btn-lg btn-primary my-5">Get Started Now!</a>
+            <a href="/dashboard" class="btn btn-lg btn-primary my-5"><i class="fa-solid fa-rocket pe-2"></i>Get Started Now!</a>
         </div>
     </section>
 
@@ -145,11 +151,11 @@
                     <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/sample-cover-images%2Fcover-5.webp?alt=media" class="card-img-top">
                 </div>
                 <div class="card-footer">
-                    <a href="/album/7526" class="btn btn-primary">View Album</a>
+                    <a href="/album/7526" class="btn btn-primary"><i class="fa-solid fa-up-right-from-square pe-2"></i>View Album</a>
                     <p>The album PIN is <b>2916</b></p>
                 </div>
             </div>
-            <a href="/dashboard" class="btn btn-lg btn-warning my-5">Create Your Album Now</a>
+            <a href="/dashboard" class="btn btn-lg btn-warning my-5"><i class="fa-solid fa-plus pe-2"></i>Create Your Album Now</a>
         </div>
     </section>
 
