UI improvements and link change

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -21,7 +21,9 @@
                     <div>
                         <img src="https://firebasestorage.googleapis.com/v0/b/vental-event-albums.appspot.com/o/assets%2Ffavicon%2Fandroid-chrome-192x192.png?alt=media" alt="" style="height: 10vh;">
                         <h2 class="display-1  fw-bold mb-3">ventAl</h2>
-                        <p class="mb-4">Create and share your Event Albums</p><a href="/dashboard" class="btn btn-primary fs-5 me-2 py-2 px-4" type="button"><i class="fa-solid fa-images pe-2"></i>Create</a>
+                        <p class="mb-1">Create and share your Event Albums</p>
+                        <p class="mark mb-4"><em>Powered by AI</em></p>
+                        <a href="/dashboard" class="btn btn-primary fs-5 me-2 py-2 px-4" type="button"><i class="fa-solid fa-images pe-2"></i>Create</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +163,7 @@
 
     <footer>
         <div class="container text-center">
-            <p class="text-muted">Made with ❤️ by <a href="https://www.linkedin.com/in/gautam-mehta-codergtm/" target="_blank">Gautam Mehta</a></p>
+            <p class="text-muted">Made with ❤️ by <a href="https://www.linkedin.com/in/the-gautam-mehta/" target="_blank">Gautam Mehta</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
